--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <title>template-repo</title>
+  <title>Art Museum API</title>
 </head>
+
 <body>
-  <h1>don't forget to change the titles in webpack.config too</h1>
+
+  <!-- <nav class="navbar navbar-light bg-light">
+      <form class="form-inline">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      </form>
+    </nav> -->
+
+  <div id="viewport">
+    <!-- Sidebar -->
+    <div id="sidebar">
+      <header>
+        <a href="#">Art Browser</a>
+      </header>
+
+      <form class="form-inline">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search </button>
+      </form>
+
+      <ul class="nav">
+        <li>
+          <a href="#">
+            <i></i> MET
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <i></i> Smitsonian
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <i class="zmdi zmdi-widgets"></i> Chicago Art M
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <i></i> Seattle SAM
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <i></i> Other Museum
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <i></i> About
+          </a>
+        </li>
+      </ul>
+    </div>
+    <!-- Content -->
+    <div id="content">
+      <nav class="navbar navbar-default">
+        <div class="container-fluid">
+          <ul class="nav navbar-nav navbar-right">
+            <li>
+              <a href="#"><i></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+      <div class="container-fluid">
+        <h1>Art piece thumbnails will go here</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore voluptatem eum cumque similique fugit,
+          dolorum expedita sit laboriosam eius obcaecati culpa perferendis odit amet distinctio, quasi cum delectus
+          reprehenderit. Asperiores?
+        </p>
+
+        <div class="row">
+          <div class="col">col</div>
+          <div class="col">col</div>
+          <div class="col">col</div>
+          <div class="col">col</div>
+        </div>
+
+        <div class="row">
+          <div class="col">col</div>
+          <div class="col">col</div>
+          <div class="col">col</div>
+          <div class="col">col</div>
+        </div>
+
+        <div class="row">
+          <div class="col">col</div>
+          <div class="col">col</div>
+          <div class="col">col</div>
+          <div class="col">col</div>
+        </div>
+
+      </div>
+    </div>
+  </div>
 </body>
+
 </html>
