--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
         </li>
         <li>
           <a href="#">
-            <i class="zmdi zmdi-widgets"></i> Chicago Art M
+            <i></i> Chicago Art M
           </a>
         </li>
         <li>
