add art institute API call functions

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,12 @@
   <title>team-week</title>
 </head>
 <body>
-  
+  <div class="searchbar-group" id="searchbar-group">
+    <input type="text" name="searchBar" id="search">
+    <button class="btn btn-primary" id="searchBtn">Search!</button>
+  </div>
+  <div id="searchAIResults">
+    <ul id="artInList"></ul>
+  </div>
 </body>
 </html>
