--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
 
       <form class="form-inline">
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search </button>
+        <button class="btn btn-outline-success my-2 my-sm-0 text-right" type="submit">Search </button>
       </form>
 
       <ul class="nav">
@@ -59,24 +59,72 @@
         </li>
       </ul>
     </div>
-    <!-- Content -->
-    <div id="content">
-      <nav class="navbar navbar-default">
-        <div class="container-fluid">
-          <ul class="nav navbar-nav navbar-right">
-            <li>
-              <a href="#"><i></i>
-              </a>
-            </li>
-          </ul>
+
+      <!-- carousel -->
+      <div id="carouselFade" class="carousel slide carousel-fade" data-ride="carousel">
+        
+        <div class="carousel-inner">
+          <div class="carousel-item active" data-interval="10000">
+            <img src="../assets/images/lady-cut.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption">
+            </div>
+          </div>
+          <div class="carousel-item" data-interval="10000">
+            <img src="../assets/images/sea-cut.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption">
+            </div>
+          </div>
+          <div class="carousel-item" data-interval="10000">
+            <img src="../assets/images/bowl-cut.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption">
+            </div>
+          </div>
+          <div class="carousel-item" data-interval="10000">
+            <img src="../assets/images/misc-cut.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption">
+            </div>
+          </div>
+          <div class="carousel-item" data-interval="10000">
+            <img src="../assets/images/david-cut.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+            </div>
+          </div>
+          <div class="carousel-item" data-interval="10000">
+            <img src="../assets/images/abstract2-cut.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+
+            </div>
+          </div>
+          <div class="carousel-item" data-interval="10000">
+            <img src="../assets/images/proserpine-cut.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+            </div>
+          </div>
+
+          <div class="carousel-item" data-interval="10000">
+            <img src="../assets/images/lips-cut.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+            </div>
+          </div>
+            <div class="carousel-item" data-interval="10000">
+              <img src="../assets/images/field-cut.jpg" class="d-block w-100" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+              </div>
+          </div>
+          <div class="carousel-item" data-interval="10000">
+            <img src="../assets/images/travel-cut.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+            </div>
+          </div>
         </div>
-      </nav>
+      </div>
+
+      <!-- End of carousel -->
+
       <div class="container-fluid">
-        <h1>Art piece thumbnails will go here</h1>
+        <h1>Art is beautiful...</h1>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore voluptatem eum cumque similique fugit,
-          dolorum expedita sit laboriosam eius obcaecati culpa perferendis odit amet distinctio, quasi cum delectus
-          reprehenderit. Asperiores?
+          We made this project to bring it closer to you. Feel free to look around. Search for anthing and enjoy the art provided by top national museums.
         </p>
 
         <div class="row">
@@ -103,6 +151,7 @@
       </div>
     </div>
   </div>
+
 </body>
 
 </html>
