prior to col division

--- a/src/index.html
+++ b/src/index.html
@@ -21,10 +21,18 @@
         <a href="#">Art Browser</a>
       </header>
 
-      <form class="form-inline">
+      <!-- <form class="form-inline">
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success my-2 my-sm-0 text-right" type="submit">Search </button>
-      </form>
+      </form> -->
+
+      <div class="input-group mb-3">
+        <input type="text" class="form-control" placeholder="Anything" aria-label="Anything" aria-describedby="basic-addon2">
+        <div class="input-group-append">
+          <button class="btn btn-dark" type="button">Search</button>
+        </div>
+      </div>
+      
 
       <ul class="nav">
         <li>
