Fixed layout issue

--- a/src/index.html
+++ b/src/index.html
@@ -21,18 +21,10 @@
         <a href="#">Art Browser</a>
       </header>
 
-      <!-- <form class="form-inline">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <form class="form-inline">
+        <input class="form-control mr-sm-3" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success my-2 my-sm-0 text-right" type="submit">Search </button>
-      </form> -->
-
-      <div class="input-group mb-3">
-        <input type="text" class="form-control" placeholder="Anything" aria-label="Anything" aria-describedby="basic-addon2">
-        <div class="input-group-append">
-          <button class="btn btn-dark" type="button">Search</button>
-        </div>
-      </div>
-      
+      </form>
 
       <ul class="nav">
         <li>
@@ -42,7 +34,7 @@
         </li>
         <li>
           <a href="#">
-            <i></i> Smitsonian
+            <i></i> Smithsonian
           </a>
         </li>
         <li>
@@ -132,28 +124,28 @@
       <div class="container-fluid">
         <h1>Art is beautiful...</h1>
         <p>
-          We made this project to bring it closer to you. Feel free to look around. Search for anthing and enjoy the art provided by top national museums.
+          We made this project to bring it closer to you. Feel free to look around. Search and enjoy the art provided by the top national museums.
         </p>
 
         <div class="row">
           <div class="col">col</div>
           <div class="col">col</div>
           <div class="col">col</div>
-          <div class="col">col</div>
+          <!-- <div class="col">col</div> -->
         </div>
 
         <div class="row">
           <div class="col">col</div>
           <div class="col">col</div>
           <div class="col">col</div>
-          <div class="col">col</div>
+          <!-- <div class="col">col</div> -->
         </div>
 
         <div class="row">
           <div class="col">col</div>
           <div class="col">col</div>
           <div class="col">col</div>
-          <div class="col">col</div>
+          <!-- <div class="col">col</div> -->
         </div>
 
       </div>
