--- a/src/index.html
+++ b/src/index.html
@@ -21,10 +21,16 @@
         <a href="#">Art Browser</a>
       </header>
 
-      <form class="form-inline">
+      <form id="searchForm" class="form-inline">
         <input class="form-control mr-sm-3" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success my-2 my-sm-0 text-right" type="submit">Search </button>
       </form>
+     
+     <form id="searchForm2" class="form-inline2">
+        <input class="form-control mr-sm-3" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0 text-right" type="submit">Search </button>
+      </form>
+
 
       <ul class="nav">
         <li>
@@ -60,96 +66,97 @@
       </ul>
     </div>
 
-      <!-- carousel -->
-      <div id="carouselFade" class="carousel slide carousel-fade" data-ride="carousel">
-        
-        <div class="carousel-inner">
-          <div class="carousel-item active" data-interval="10000">
-            <img src="../assets/images/lady-cut.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption">
-            </div>
-          </div>
-          <div class="carousel-item" data-interval="10000">
-            <img src="../assets/images/sea-cut.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption">
-            </div>
-          </div>
-          <div class="carousel-item" data-interval="10000">
-            <img src="../assets/images/bowl-cut.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption">
-            </div>
-          </div>
-          <div class="carousel-item" data-interval="10000">
-            <img src="../assets/images/misc-cut.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption">
-            </div>
-          </div>
-          <div class="carousel-item" data-interval="10000">
-            <img src="../assets/images/david-cut.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-            </div>
-          </div>
-          <div class="carousel-item" data-interval="10000">
-            <img src="../assets/images/abstract2-cut.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
+    <!-- carousel -->
+    <div id="carouselFade" class="carousel slide carousel-fade" data-ride="carousel">
 
-            </div>
-          </div>
-          <div class="carousel-item" data-interval="10000">
-            <img src="../assets/images/proserpine-cut.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-            </div>
-          </div>
-
-          <div class="carousel-item" data-interval="10000">
-            <img src="../assets/images/lips-cut.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-            </div>
-          </div>
-            <div class="carousel-item" data-interval="10000">
-              <img src="../assets/images/field-cut.jpg" class="d-block w-100" alt="...">
-              <div class="carousel-caption d-none d-md-block">
-              </div>
-          </div>
-          <div class="carousel-item" data-interval="10000">
-            <img src="../assets/images/travel-cut.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-            </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active" data-interval="10000">
+          <img src="../assets/images/lady-cut.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption">
           </div>
         </div>
-      </div>
+        <div class="carousel-item" data-interval="10000">
+          <img src="../assets/images/sea-cut.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption">
+          </div>
+        </div>
+        <div class="carousel-item" data-interval="10000">
+          <img src="../assets/images/bowl-cut.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption">
+          </div>
+        </div>
+        <div class="carousel-item" data-interval="10000">
+          <img src="../assets/images/misc-cut.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption">
+          </div>
+        </div>
+        <div class="carousel-item" data-interval="10000">
+          <img src="../assets/images/david-cut.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+          </div>
+        </div>
+        <div class="carousel-item" data-interval="10000">
+          <img src="../assets/images/abstract2-cut.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
 
-      <!-- End of carousel -->
-
-      <div class="container-fluid">
-        <h1>Art is beautiful...</h1>
-        <p>
-          We made this project to bring it closer to you. Feel free to look around. Search and enjoy the art provided by the top national museums.
-        </p>
-
-        <div class="row">
-          <div class="col">col</div>
-          <div class="col">col</div>
-          <div class="col">col</div>
-          <!-- <div class="col">col</div> -->
+          </div>
+        </div>
+        <div class="carousel-item" data-interval="10000">
+          <img src="../assets/images/proserpine-cut.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+          </div>
         </div>
 
-        <div class="row">
-          <div class="col">col</div>
-          <div class="col">col</div>
-          <div class="col">col</div>
-          <!-- <div class="col">col</div> -->
+        <div class="carousel-item" data-interval="10000">
+          <img src="../assets/images/lips-cut.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+          </div>
         </div>
-
-        <div class="row">
-          <div class="col">col</div>
-          <div class="col">col</div>
-          <div class="col">col</div>
-          <!-- <div class="col">col</div> -->
+        <div class="carousel-item" data-interval="10000">
+          <img src="../assets/images/field-cut.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+          </div>
         </div>
-
+        <div class="carousel-item" data-interval="10000">
+          <img src="../assets/images/travel-cut.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+          </div>
+        </div>
       </div>
     </div>
+
+    <!-- End of carousel -->
+
+    <div class="container-fluid">
+      <h1>Art is beautiful...</h1>
+      <p>
+        We made this project to bring it closer to you. Feel free to look around. Search and enjoy the art provided by
+        the top national museums.
+      </p>
+
+      <div class="row">
+        <div class="col">col</div>
+        <div class="col">col</div>
+        <div class="col">col</div>
+        <!-- <div class="col">col</div> -->
+      </div>
+
+      <div class="row">
+        <div class="col">col</div>
+        <div class="col">col</div>
+        <div class="col">col</div>
+        <!-- <div class="col">col</div> -->
+      </div>
+
+      <div class="row">
+        <div class="col">col</div>
+        <div class="col">col</div>
+        <div class="col">col</div>
+        <!-- <div class="col">col</div> -->
+      </div>
+
+    </div>
+  </div>
   </div>
 
 </body>
