resolved merge conflicts

--- a/src/index.html
+++ b/src/index.html
@@ -7,12 +7,6 @@
 
 <body>
 
-  <!-- <nav class="navbar navbar-light bg-light">
-      <form class="form-inline">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
-    </nav> -->
 
   <div id="viewport">
     <!-- Sidebar -->
@@ -20,60 +14,46 @@
       <header>
         <a href="#">Art Browser</a>
       </header>
-
-<<<<<<< HEAD
-<<<<<<< HEAD
-      <form class="form-inline">
-=======
-      <form id="searchForm" class="form-inline">
-        <input class="form-control mr-sm-3" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0 text-right" type="submit">Search </button>
-      </form>
-     
-     <form id="searchForm2" class="form-inline2">
->>>>>>> metmuseum
-        <input class="form-control mr-sm-3" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0 text-right" type="submit">Search </button>
-=======
-      <form id="searchForm" class="form-inline">
-        <input id='search' class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search </button>
->>>>>>> integrating
-      </form>
-
-
-      <ul class="nav">
-        <li>
-          <a href="#">
-            <i></i> MET
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <i></i> Smithsonian
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <i></i> Chicago Art M
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <i></i> Seattle SAM
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <i></i> Other Museum
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <i></i> About
-          </a>
-        </li>
-      </ul>
+        <form id="searchForm" class="form-inline">
+          <input id="search" class="form-control mr-sm-3" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0 text-right" type="submit">Search </button>
+        </form>
+        <form id="searchForm2" class="form-inline2">
+          <input id="search2" class="form-control mr-sm-3" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0 text-right" type="submit">Search </button>
+        </form>
+        <ul class="nav">
+          <li>
+            <a href="#">
+              <i></i> MET
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i></i> Smithsonian
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i></i> Chicago Art M
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i></i> Seattle SAM
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i></i> Other Museum
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i></i> About
+            </a>
+          </li>
+        </ul>
     </div>
 
     <!-- carousel -->
@@ -132,66 +112,20 @@
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
-<<<<<<< HEAD
+        </nav>
       </div>
     </div>
-
-<<<<<<< HEAD
-      <!-- End of carousel -->
-
-      <div class="container-fluid">
-        <h1>Art is beautiful...</h1>
-=======
-      </nav>
-      <div class="container-fluid" id="searchResult">
-        <h1>Art piece thumbnails will go here</h1>
->>>>>>> integrating
-        <p>
-          We made this project to bring it closer to you. Feel free to look around. Search and enjoy the art provided by the top national museums.
-        </p>
-<ul id="searchArtInList"></ul>
-        <div class="row">
-          <div class="col">col</div>
-          <div class="col">col</div>
-          <div class="col">col</div>
-          <!-- <div class="col">col</div> -->
-        </div>
-=======
     <!-- End of carousel -->
-
     <div class="container-fluid">
       <h1>Art is beautiful...</h1>
       <p>
-        We made this project to bring it closer to you. Feel free to look around. Search and enjoy the art provided by
+        We made this project to bring it closer to you. Feel free to look around. Search and enjoy the art
+        provided by
         the top national museums.
       </p>
->>>>>>> metmuseum
-
-      <div class="row">
-        <div class="col">col</div>
-        <div class="col">col</div>
-        <div class="col">col</div>
-        <!-- <div class="col">col</div> -->
-      </div>
-
-      <div class="row">
-        <div class="col">col</div>
-        <div class="col">col</div>
-        <div class="col">col</div>
-        <!-- <div class="col">col</div> -->
-      </div>
-
-      <div class="row">
-        <div class="col">col</div>
-        <div class="col">col</div>
-        <div class="col">col</div>
-        <!-- <div class="col">col</div> -->
-      </div>
-
+      <ul id="searchArtInList"></ul>
     </div>
   </div>
-  </div>
-
 </body>
 
 </html>
