grant functionality to met search function

--- a/src/index.html
+++ b/src/index.html
@@ -14,39 +14,29 @@
       <header>
         <a href="#">Art Browser</a>
       </header>
-        <form id="searchForm" class="form-inline">
-          <input id="search" class="form-control mr-sm-3" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0 text-right" type="submit">Search </button>
-        </form>
-        <form id="searchForm2" class="form-inline2">
-          <input id="search2" class="form-control mr-sm-3" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0 text-right" type="submit">Search </button>
-        </form>
-        <ul class="nav">
-          <li>
-            <a href="#">
-              <i></i> MET
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <i></i> Smithsonian
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <i></i> Chicago Art M
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <i></i> Seattle SAM
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <i></i> Other Museum
-            </a>
+      <ul class="nav">
+        <li>
+          <a href="#">
+            <i></i> MET
+          </a>
+          <form id="searchForm2" class="form-inline">
+            <input id="search2" class="form-control mr-sm-3" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0 text-right" type="submit">Search </button>
+          </form>
+        </li>
+        <li>
+          <a href="#">
+            <i></i> Smithsonian
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <i></i> Art Institute
+          </a>
+          <form id="searchForm" class="form-inline">
+            <input id="search" class="form-control mr-sm-3" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0 text-right" type="submit">Search </button>
+          </form>
           </li>
           <li>
             <a href="#">
@@ -123,7 +113,8 @@
         provided by
         the top national museums.
       </p>
-      <ul id="searchArtInList"></ul>
+      <ul id="artInList"></ul>
+      <ul id="metList"></ul>
     </div>
   </div>
 </body>
