--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,26 @@
           </a>
           <form id="searchForm2" class="form-inline">
             <input id="search2" class="form-control mr-sm-3" type="search" placeholder="Search" aria-label="Search">
+            <select id="departmentId" type="dropdown">
+              <option value="1" selected>American Decorative Art</option>
+              <option value="3">Ancient near Eastern Art</option>
+              <option value="4">Arms and Armor</option>
+              <option value="5">Arts of Africa, Oceania, and the Americas</option>
+              <option value="6">Asian Art</option>
+              <option value="7">The Cloisters</option>
+              <option value="8">the Costume Institute</option>
+              <option value="9">Drawings and Prints</option>
+              <option value="10">Egyptian Art</option>
+              <option value="11">European Paintings</option>
+              <option value="12">European Sculpture and Decorative Art</option>
+              <option value="14">Islamic Art</option>
+              <option value="15">The Robert Lehman Collection</option>
+              <option value="16">The Libraries</option>
+              <option value="17">Medieval Art</option>
+              <option value="18">Musical Instruments</option>
+              <option value="19">Photographs</option>
+              <option value="21">Modern Art</option>
+            </select>
             <button class="btn btn-outline-success my-2 my-sm-0 text-right" type="submit">Search </button>
           </form>
         </li>
@@ -78,7 +98,6 @@
         <div class="carousel-item" data-interval="10000">
           <img src="../assets/images/abstract2-cut.jpg" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
-
           </div>
         </div>
         <div class="carousel-item" data-interval="10000">
@@ -86,7 +105,6 @@
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
-
         <div class="carousel-item" data-interval="10000">
           <img src="../assets/images/lips-cut.jpg" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
