--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,6 @@
 </head>
 
 <body>
-
-
   <div id="viewport">
     <!-- Sidebar -->
     <div id="sidebar">
@@ -139,7 +137,20 @@
       <ul id="metList"></ul>
       <ul id="harvardList"></ul>
     </div>
-  </div>
+
+      </div>
+    </div>
+
+
+
+<div class="row">
+
+   
+</div>
+
+
+
+</div>
 </body>
 
 </html>
