bg changed, added card shadow

--- a/src/index.html
+++ b/src/index.html
@@ -127,12 +127,18 @@
     </div>
     <!-- End of carousel -->
     <div class="container-fluid">
-      <h1>Art is beautiful...</h1>
+      <div class="card w-75">
+        <img class="card-img-top">
+        <div class="card-body">
+          <h1>Art is beautiful...</h1>
       <p>
         We made this project to bring it closer to you. Feel free to look around. Search and enjoy the art
         provided by
         the top national museums.
       </p>
+        </div>
+        </div>
+      
       <ul id="artInList"></ul>
       <ul id="metList"></ul>
       <ul id="harvardList"></ul>
