update display results

--- a/src/index.html
+++ b/src/index.html
@@ -59,13 +59,13 @@
             <input id="search" class="form-control mr-sm-3" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success my-2 my-sm-0 text-right" type="submit">Search </button>
           </form>
-          </li>
-          <li>
-            <a href="#">
-              <i></i> About
-            </a>
-          </li>
-        </ul>
+        </li>
+        <li>
+          <a href="#">
+            <i></i> About
+          </a>
+        </li>
+      </ul>
     </div>
 
     <!-- carousel -->
@@ -133,24 +133,14 @@
         provided by
         the top national museums.
       </p>
-      <ul id="artInList"></ul>
-      <ul id="metList"></ul>
-      <ul id="harvardList"></ul>
-    </div>
-
+      <div id="resultsDisplay">
+        <ul id="resultFeed"></ul>
       </div>
+
     </div>
 
+  </div>
 
-
-<div class="row">
-
-   
-</div>
-
-
-
-</div>
 </body>
 
 </html>
