BUGFIX: merge conflict resolved

--- a/src/index.html
+++ b/src/index.html
@@ -59,13 +59,13 @@
             <input id="search" class="form-control mr-sm-3" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success my-2 my-sm-0 text-right" type="submit">Search </button>
           </form>
-          </li>
-          <li>
-            <a href="#">
-              <i></i> About
-            </a>
-          </li>
-        </ul>
+        </li>
+        <li>
+          <a href="#">
+            <i></i> About
+          </a>
+        </li>
+      </ul>
     </div>
 
     <!-- carousel -->
@@ -131,32 +131,36 @@
         <img class="card-img-top">
         <div class="card-body">
           <h1>Art is beautiful...</h1>
-      <p>
-        We made this project to bring it closer to you. Feel free to look around. Search and enjoy the art
-        provided by
-        the top national museums.
-      </p>
+          <p>
+            We made this project to bring it closer to you. Feel free to look around. Search and enjoy the art
+            provided by
+            the top national museums.
+          </p>
         </div>
-        </div>
-      
-      <ul id="artInList"></ul>
-      <ul id="metList"></ul>
-      <ul id="harvardList"></ul>
-    </div>
-
       </div>
+
+      <!-- <ul id="artInList"></ul>
+      <ul id="metList"></ul>
+      <ul id="harvardList"></ul> -->
+
+      <div id="resultsDisplay">
+        <ul id="resultFeed"></ul>
+      </div
     </div>
 
-
-
-<div class="row">
-
-   
-</div>
+  </div>
+  </div>
 
 
 
-</div>
+  <div class="row">
+
+
+  </div>
+
+
+
+  </div>
 </body>
 
 </html>
