--- a/src/index.html
+++ b/src/index.html
@@ -65,9 +65,16 @@
             <i></i> About
           </a>
         </li>
+        <div class= "license">
+        <li>
+          <a href="https://www.artic.edu/image-licensing" style = "font-size: 7px">Art Institute Chicago Licensing </a>
+          <a href="https://www.metmuseum.org/about-the-met/policies-and-documents/open-access"style = "font-size: 7px">MET Museum Policies</a>
+          <a href="https://harvardartmuseums.org/teaching-and-research/image-licensing/image-licensing"style = "font-size: 7px">Harvard Art Museum Licensing</a>
+        </li>
+      </div>
       </ul>
     </div>
-
+</div>
     <!-- carousel -->
     <div id="carouselFade" class="carousel slide carousel-fade" data-ride="carousel">
 
