adjust displayfeed to display most relevent searches first

--- a/src/index.html
+++ b/src/index.html
@@ -65,110 +65,101 @@
             <i></i> About
           </a>
         </li>
-        <div class= "license">
-        <li>
-          <a href="https://www.artic.edu/image-licensing" style = "font-size: 7px">Art Institute Chicago Licensing </a>
-          <a href="https://www.metmuseum.org/about-the-met/policies-and-documents/open-access"style = "font-size: 7px">MET Museum Policies</a>
-          <a href="https://harvardartmuseums.org/teaching-and-research/image-licensing/image-licensing"style = "font-size: 7px">Harvard Art Museum Licensing</a>
-        </li>
-      </div>
+        <div class="license">
+          <li>
+            <a href="https://www.artic.edu/image-licensing" style="font-size: 7px">Art Institute Chicago Licensing </a>
+            <a href="https://www.metmuseum.org/about-the-met/policies-and-documents/open-access"
+              style="font-size: 7px">MET Museum Policies</a>
+            <a href="https://harvardartmuseums.org/teaching-and-research/image-licensing/image-licensing"
+              style="font-size: 7px">Harvard Art Museum Licensing</a>
+          </li>
+        </div>
       </ul>
     </div>
-</div>
-    <!-- carousel -->
-    <div id="carouselFade" class="carousel slide carousel-fade" data-ride="carousel">
+  </div>
+  <!-- carousel -->
+  <div id="carouselFade" class="carousel slide carousel-fade" data-ride="carousel">
 
-      <div class="carousel-inner">
-        <div class="carousel-item active" data-interval="10000">
-          <img src="../assets/images/lady-cut.jpg" class="d-block w-100" alt="...">
-          <div class="carousel-caption">
-          </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active" data-interval="10000">
+        <img src="../assets/images/lady-cut.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption">
         </div>
-        <div class="carousel-item" data-interval="10000">
-          <img src="../assets/images/sea-cut.jpg" class="d-block w-100" alt="...">
-          <div class="carousel-caption">
-          </div>
+      </div>
+      <div class="carousel-item" data-interval="10000">
+        <img src="../assets/images/sea-cut.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption">
         </div>
-        <div class="carousel-item" data-interval="10000">
-          <img src="../assets/images/bowl-cut.jpg" class="d-block w-100" alt="...">
-          <div class="carousel-caption">
-          </div>
+      </div>
+      <div class="carousel-item" data-interval="10000">
+        <img src="../assets/images/bowl-cut.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption">
         </div>
-        <div class="carousel-item" data-interval="10000">
-          <img src="../assets/images/misc-cut.jpg" class="d-block w-100" alt="...">
-          <div class="carousel-caption">
-          </div>
+      </div>
+      <div class="carousel-item" data-interval="10000">
+        <img src="../assets/images/misc-cut.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption">
         </div>
-        <div class="carousel-item" data-interval="10000">
-          <img src="../assets/images/david-cut.jpg" class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-          </div>
+      </div>
+      <div class="carousel-item" data-interval="10000">
+        <img src="../assets/images/david-cut.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
         </div>
-        <div class="carousel-item" data-interval="10000">
-          <img src="../assets/images/abstract2-cut.jpg" class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-          </div>
+      </div>
+      <div class="carousel-item" data-interval="10000">
+        <img src="../assets/images/abstract2-cut.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
         </div>
-        <div class="carousel-item" data-interval="10000">
-          <img src="../assets/images/proserpine-cut.jpg" class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-          </div>
+      </div>
+      <div class="carousel-item" data-interval="10000">
+        <img src="../assets/images/proserpine-cut.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
         </div>
-        <div class="carousel-item" data-interval="10000">
-          <img src="../assets/images/lips-cut.jpg" class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-          </div>
+      </div>
+      <div class="carousel-item" data-interval="10000">
+        <img src="../assets/images/lips-cut.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
         </div>
-        <div class="carousel-item" data-interval="10000">
-          <img src="../assets/images/field-cut.jpg" class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-          </div>
+      </div>
+      <div class="carousel-item" data-interval="10000">
+        <img src="../assets/images/field-cut.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
         </div>
-        <div class="carousel-item" data-interval="10000">
-          <img src="../assets/images/travel-cut.jpg" class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-          </div>
+      </div>
+      <div class="carousel-item" data-interval="10000">
+        <img src="../assets/images/travel-cut.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
         </div>
-        </nav>
+      </div>
+      </nav>
+    </div>
+  </div>
+  <!-- End of carousel -->
+  <div class="container-fluid">
+    <div class="card w-75">
+      <img class="card-img-top">
+      <div class="card-body">
+        <h1>Art is beautiful...</h1>
+        <p>
+          We made this project to bring it closer to you. Feel free to look around. Search and enjoy the art
+          provided by
+          the top national museums.
+        </p>
       </div>
     </div>
-    <!-- End of carousel -->
-    <div class="container-fluid">
-      <div class="card w-75">
-        <img class="card-img-top">
-        <div class="card-body">
-          <h1>Art is beautiful...</h1>
-          <p>
-            We made this project to bring it closer to you. Feel free to look around. Search and enjoy the art
-            provided by
-            the top national museums.
-          </p>
-        </div>
-      </div>
 
-      <!-- <ul id="artInList"></ul>
+    <!-- <ul id="artInList"></ul>
       <ul id="metList"></ul>
       <ul id="harvardList"></ul> -->
 
-      <div id="resultsDisplay">
-        <ul id="resultFeed"></ul>
-      </div
+    <div id="resultsDisplay">
+      <ul id="resultFeed"></ul>
     </div>
-
   </div>
   </div>
-
-
-
-  <div class="row">
-
-
   </div>
-
-    </div>
-
   </div>
-
+  </div>
   </div>
 </body>
 
