--- a/src/index.html
+++ b/src/index.html
@@ -62,16 +62,16 @@
         </li>
         <li>
           <a href="#">
-            <i></i> About
+            <i></i> Licensing
           </a>
         </li>
         <div class="license">
           <li>
-            <a href="https://www.artic.edu/image-licensing" style="font-size: 7px">Art Institute Chicago Licensing </a>
+            <a href="https://www.artic.edu/image-licensing" style="font-size: 9.5px">Art Institute Chicago Licensing </a><br>
             <a href="https://www.metmuseum.org/about-the-met/policies-and-documents/open-access"
-              style="font-size: 7px">MET Museum Policies</a>
+              style="font-size: 9.5px">MET Museum Policies</a><br>
             <a href="https://harvardartmuseums.org/teaching-and-research/image-licensing/image-licensing"
-              style="font-size: 7px">Harvard Art Museum Licensing</a>
+              style="font-size: 9.5px">Harvard Art Museum Licensing</a><br>
           </li>
         </div>
       </ul>
