--- a/src/index.html
+++ b/src/index.html
@@ -60,26 +60,23 @@
             <button class="btn btn-dark my-2 my-sm-0 text-right" type="submit">Search </button>
           </form>
         </li>
-        <li>
-          <a href="#" id="copyright">
-
-          </a>
-        </li>
         <div class="license">
           <li>
-            <a href="https://www.artic.edu/image-licensing" style="font-size: 9.5px">Art Institute Chicago Licensing </a><br>
+            <a href="https://www.artic.edu/image-licensing" style="font-size: 11.5px">Art Institute Chicago Licensing
+            </a><br>
             <a href="https://www.metmuseum.org/about-the-met/policies-and-documents/open-access"
-              style="font-size: 9.5px">MET Museum Policies</a><br>
+              style="font-size: 11.5px">MET Museum Policies</a><br>
             <a href="https://harvardartmuseums.org/teaching-and-research/image-licensing/image-licensing"
-              style="font-size: 9.5px">Harvard Art Museum Licensing</a><br>
+              style="font-size: 11.5px">Harvard Art Museum Licensing</a><br>
+              <a href="#"
+              style="font-size: 11.5px">Copyright&copy;2021</a><br>
           </li>
         </div>
       </ul>
-      <footer>Copyright&copy;2021
+      <footer>
       </footer>
     </div>
     <div id="carouselFade" class="carousel slide carousel-fade" data-ride="carousel">
-      
       <div class="carousel-inner">
         <div class="carousel-item active" data-interval="10000">
           <img src="../assets/images/lady-cut.jpg" class="d-block w-100" alt="...">
@@ -131,32 +128,21 @@
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
-      </nav>
-    </div>
-    <!-- End of carousel -->
+        </nav>
+      </div>
       <div id="message">
-      <h2>Art is beautiful...</h2>
-          <p>
-            We made this project to bring it closer to you. Feel free to look around. Search and enjoy the art
-            provided by
-            the top national museums.
-          </p>
-        </div>
+        <h2>Art is beautiful...</h2>
+        <p>
+          We made this project to bring it closer to you. Feel free to look around. Search and enjoy the art
+          provided by
+          the top national museums.
+        </p>
+      </div>
       <div id="resultsDisplay">
         <ul id="resultFeed"></ul>
       </div>
-
     </div>
   </div>
-  <div class="row">
-
-
-  </div>
-
-
-
-  </div>
-</div>
 </body>
 
 </html>
